--- a/app/src/main/res/layout/activity_main_test5.xml
+++ b/app/src/main/res/layout/activity_main_test5.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mustang"
+    android:background="@drawable/bun"
     tools:context=".test2.MainActivityTest3">
 
     <Button
@@ -35,12 +35,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:layout_marginBottom="107dp"
-        android:text="Oluwatosin considers himself a top-class driver.
-He looks forward to driving in a competition someday.
-He also swims very well.
-He has interests in politics, machine learning, data science and robotics.
-"
-        android:textColor="#ff1a40"
+        android:text="Oluwabunmi is multi-lingual. She speaks Yoruba, English, French and German. She mentors youngsters on how to be a better version of themselves. She is an advocate for Education-For-All. She has volunteered in many capacities."
+        android:textColor="#8c1aff"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/button12"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +44,7 @@ He has interests in politics, machine learning, data science and robotics.
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/button14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
